--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -2,5 +2,4 @@ wallybum:
   name: WallyBum
   title: developer
   url: https://github.com/wallybum
-  image_url: https://github.com/endiliey.png
-
+  image_url: https://github.com/wallybum.png
